# AudioExtraction

./: CMakeLists.txt  Demodulator.h  FileManager.h  FromInt32ToFloat.h  README.md  Wav.h  downsample.h  filter.h  main.ccp
include/: CMakeAudio.h  Demodulator.h  DownSample.h  FileManager.h  Filter.h  FromInt32ToFloat.h  Wav.h
matlabScripts/: CheckWav.m  ListenWav.m
src/: CMakeAudio.cpp  Filter.cpp  FromInt32ToFloat.cpp  wav.cpp
tests/: CMakeAudio_DemodulatorTests.cpp  CMakeAudio_FilterTests.cpp  CMakeAudio_ReadTests.cpp  CMakeAudio_WriteTests.cpp  CMakeLists.txt
